[package]
name = "dmypyls"
version = "0.1.0"
edition = "2021"
license = "MIT"
keywords = ["LSP", "mypy", "python", "ide", "diagnostics"]
categories = ["development-tools", "text-editors"]
description = "A language server to support editor agnostic usage of the dmypy daemon."
readme = "README.md"
homepage = "https://github.com/wbbradley/dmypyls"
repository = "https://github.com/wbbradley/dmypyls"

[dependencies]
tokio = { version = "1.41.1", features = ["full"] }
serde = { version = "1.0.214", features = ["derive"] }
tower-lsp = "0.20.0"
serde_json = "1.0.132"
log = "0.4.22"
simple-logging = "2.0.2"
xdg = "2.5.2"
shlex = "1.3.0"
regex = "1.11.1"
